syntax = "proto3";
package calculator;
option java_package = "com.grpc.calculator";
option java_multiple_files = true;

message Numbers {
  int64  first_number = 1;
  int64 second_number = 2;
}

message Request {
  Numbers numbers = 1;
}

message Response {
  int64  result = 1;
}

message DivResponse {
  double result = 1;
}

service CalculatorService {
  rpc Sum(Request) returns (Response) {};
  rpc Sub(Request) returns (Response) {};
  rpc Multi(Request) returns (Response) {};
  rpc Div(Request) returns (DivResponse) {};
}